# rs-bezier2

./: Cargo.toml  README.md
src/: cubic.rs  lib.rs  linear.rs  n.rs  quadratic.rs
